<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
  ~
  ~ WSO2 Inc. licenses this file to you under the Apache License,
  ~ Version 2.0 (the "License"); you may not use this file except
  ~ in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied. See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">

        <RelativeLayout
                android:id="@+id/layout_topbar"
                style="@style/TitleBar"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/top_bar_height"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/logo"
                    style="@style/TitleBarLogo"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/string_content"/>
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/footer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:background="@drawable/repeat_bg">
        </RelativeLayout>

        <LinearLayout
                android:id="@+id/errorLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_topbar"
                android:orientation="vertical"
                android:padding="10dip">
        </LinearLayout>

        <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/errorLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="114dp"
                android:text="@string/authentication_failed"
                android:textColor="#372c24"
                android:textSize="16sp"/>

        <Button
                android:id="@+id/btnTryAgain"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/footer"
                android:layout_below="@+id/error"
                android:layout_marginTop="17dp"
                android:background="@drawable/btn_orange"
                android:text="@string/try_again"/>
    </RelativeLayout>

</ScrollView>